# turtlebot_unizar_docker

./: .gitignore  README.md  docker-compose.yml  start.sh
catkin_ws/src/mr_mission/: CMakeLists.txt  package.xml
catkin_ws/src/mr_mission/src/: mr_mission_node.cpp
catkin_ws/src/tb_unizar_nav/: CMakeLists.txt  README.md  ground_station.yml  launch_tb_nav.sh  launch_turtlebot.yml  package.xml  stop_tmuxinator_tb.bash
catkin_ws/src/tb_unizar_nav/config/: mocap4r2_optitrack.yaml
catkin_ws/src/tb_unizar_nav/include/tb_unizar_nav/: gt_pose_broadcaster_node.hpp
catkin_ws/src/tb_unizar_nav/launch/: kobuki_node.launch.py  robot_description_unizar.launch.py  tb_unizar.launch.py
catkin_ws/src/tb_unizar_nav/maps/: dummy.yaml  dummy.yml
catkin_ws/src/tb_unizar_nav/params/: kobuki_params.yaml  nav2_params.yaml
catkin_ws/src/tb_unizar_nav/src/: gt_pose_broadcaster_node.cpp
catkin_ws/src/tb_unizar_nav/urdf/: README.md  compiled_turtlebot_unizar.urdf  turtlebot_common_library.urdf.xacro  turtlebot_unizar.urdf
catkin_ws/src/tb_unizar_nav/urdf/sensors/: astra.urdf.xacro  kinect.urdf.xacro  r200.urdf.xacro  xtion_pro.urdf.xacro
catkin_ws/src/tb_unizar_nav/urdf/stacks/: circles.urdf.xacro  hexagons.urdf.xacro
catkin_ws/src/tello_as2/: README.md  launch_as2.bash  launch_ground_station.bash  mission.py  mission_path.py  mission_vel.py
catkin_ws/src/tello_as2/config/: config.yaml
catkin_ws/src/tello_as2/config_ground_station/: mocap4r2_optitrack.yaml  rviz2_config.rviz
catkin_ws/src/tello_as2/data/: path.txt
catkin_ws/src/tello_as2/tmuxinator/: aerostack2.yaml  ground_station.yaml
docker/: Dockerfile
